{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInputController",
            "id": "174439ee-2a01-47d2-9d3d-5ec0b8e54686",
            "actions": [
                {
                    "name": "Locomotion",
                    "type": "Value",
                    "id": "8b4b95d6-2d34-4d63-a74d-d62b6d89a17b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Basic Attack",
                    "type": "Button",
                    "id": "8a0dde86-3fda-4f0b-9547-c3fe95efafd4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "0e3cdce6-443d-4732-a88b-373ff081b8bc",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(x=0.3,y=0.3)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CamerFocus",
                    "type": "Button",
                    "id": "dc0edb89-19db-487b-ac59-3ca5a9ed9ec5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "a64a84f9-f2a3-472b-9278-3a83d7f5ef26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flare Spell",
                    "type": "Button",
                    "id": "ff5c2682-3fe1-4f01-9030-d1d8a524db6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimeSpell",
                    "type": "Button",
                    "id": "414c06d1-97bb-4e66-b02c-d0e487bab28e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpSpell",
                    "type": "Button",
                    "id": "f790759f-a272-42e6-8b50-46d7b362e24a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "b9613399-338c-41bb-a3bf-006dfd5dd736",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": true
                },
                {
                    "name": "DecreaseSensitivity",
                    "type": "Button",
                    "id": "c6ac462a-3adf-411c-9f24-fd178d77fd15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseSensitivity",
                    "type": "Button",
                    "id": "4b3a1135-c6f0-46c0-b742-1799708f737d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "1ef07cd5-51db-4921-9d6c-6b447b97d1cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b104633f-86b6-48aa-a6cf-f7fbbb34a8e1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow Keys",
                    "id": "d1d25949-687c-4aa3-b1c0-db27258961d7",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "91434770-72ca-4fb0-af1d-07fd0bb88a75",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7de8df97-c95d-451c-8f91-3e5266e04a69",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "df6c34f6-c468-4431-8853-cb0a0954bc1b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a30f290e-7c61-4f70-82fa-6596fc119e23",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WSD",
                    "id": "2cf4e417-e394-49fc-89fe-0dad6e2c4cce",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "52bb79f5-673d-469e-b1b8-c48c6a45d0f3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e3c95cd4-f1a0-4fe2-83f9-f65c614288af",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a4abf1dd-f10e-4757-9322-ffd2d1c8afe1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f205ef74-e85a-4b7c-88a1-4420dc9388a4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locomotion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "324b377a-9086-4df7-b174-e9f0de48d6eb",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Basic Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "406f483f-8e28-4ad7-b8cf-4a7643dbeb94",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Basic Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71cfcf7b-c64f-47e0-b1bd-aa62a62b7ee6",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfce148f-d1ff-4e1e-b0b8-f060bbcbdb3b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37002399-62ab-47f6-a2d6-ccb62f7f1090",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamerFocus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc6eee4e-bd0b-4a28-8b33-d73942675ca2",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamerFocus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50108c6-c541-4ee7-a149-48a92521c571",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "604cd72b-f77e-40a0-b2d0-52a90e5c8b68",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flare Spell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "R2 + Triangle",
                    "id": "0dc039a3-f994-4c57-9987-3f1c762272e4",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flare Spell",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e4231d90-d66b-4fe0-aa52-49bc15d837d5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flare Spell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bd5602aa-95b7-423e-af85-c86147390c04",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flare Spell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a09b802d-18f2-44f5-9915-29812f17a36a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "R2 + Circle",
                    "id": "79b2b822-f419-4da3-9d83-453d0a379c71",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpell",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "852bc537-c4e7-4569-aac8-eb4a9ecb90d0",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "c6aba4fa-c65e-4992-adef-0af1c77ad355",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0a9f7753-ac7a-4416-b153-342e498ad3c9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "R2 + Cross",
                    "id": "ee0341f4-3b02-4c64-a1c9-34be872adbff",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpSpell",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2eb00d0c-e57f-48ad-83e1-7de2645765b4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "eac2b561-51fc-42fd-954e-c8c4a68c4775",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cbdf463c-e7db-4607-9786-242cf71034e9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bc23fe2-3b65-4d17-955f-be7643f038ef",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f84bc40b-d1f3-4d1f-a038-c247d64f3bda",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseSensitivity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f290c61-ee1a-482e-8fab-1cbe021fd3dc",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseSensitivity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc66dbcb-b2de-4cfd-ba69-907a2c4d5e48",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIInputController",
            "id": "b6ce3929-9ffa-46ca-ade0-197148236956",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "9d5ddaee-dd04-4fde-9a62-a5bdf84d9ba4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "072448af-382d-40ba-81ec-ab7d1d621786",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8997da73-a430-4ae6-913b-b255cd349f7e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62013de-6421-487a-9dc1-a09938045285",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}